[tool.poetry]
name = "ts-wrangler"
version = "0.1.0"
description = "Minimal package for wrangling timeseries datasets"
authors = ["Tung <tungxuan0111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.1.3"
matplotlib = "3.8.2"
missingno = "0.5.2"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.3"

[tool.pytest.ini_options]
pythonpath = "ts_wrangler"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
